--- a/package.json
+++ b/package.json
@@ -1,24 +1,66 @@
 {
-  "name": "erp-s",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "next dev --turbo",
+    "build": "prisma generate && prisma migrate deploy && next build",
     "start": "next start",
-    "lint": "next lint"
+    "seed": "node --loader ts-node/esm prisma/seed.js"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.4"
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
+    "@mui/types": "^7.2.14",
+    "@mui/x-charts": "^7.3.2",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.13.0",
+    "@types/gapi": "^0.0.47",
+    "@types/gapi.auth2": "^0.0.60",
+    "@types/next-auth": "^3.15.0",
+    "@types/react-chartjs-2": "^2.5.7",
+    "axios": "^1.7.1",
+    "bcrypt-ts": "^5.0.2",
+    "chart.js": "^4.4.2",
+    "dotenv": "^16.4.5",
+    "formidable": "^3.5.1",
+    "gapi-script": "^1.2.0",
+    "gaxios": "^6.6.0",
+    "geist": "^1.2.0",
+    "googleapis": "^140.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "next": "^14.0.4",
+    "next-auth": "^4.24.7",
+    "next-iron-session": "^4.2.0",
+    "postgres": "^3.4.3",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
+    "react-calendar": "^5.0.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-circular-progressbar": "^2.1.0",
+    "react-datepicker": "^6.9.0",
+    "react-dom": "^18.2.0",
+    "react-google-calendar-api": "^2.3.0",
+    "sharp": "^0.33.3"
+  },
+  "compilerOptions": {
+    "types": [
+      "@mui/material"
+    ]
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
-  }
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/node": "^20.14.9",
+    "@types/react": "^18.2.79",
+    "@types/react-datepicker": "^6.2.0",
+    "@types/react-dom": "^18.2.25",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "prisma": "^5.15.0",
+    "tailwindcss": "^3.4.0",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.5.3"
+  },
+  "type": "module"
 }
