--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next": "^14.0.4",
     "next-auth": "^4.24.7",
     "next-iron-session": "^4.2.0",
+    "next-plugin-svgr": "^1.1.10",
     "postgres": "^3.4.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
