--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "react-google-calendar-api": "^2.3.0",
     "react-icons": "^5.2.1",
     "recharts": "^2.12.7",
-    "sharp": "^0.33.3"
+    "sharp": "^0.33.3",
+    "tailwindcss-animate": "^1.0.7"
   },
   "compilerOptions": {
     "types": [
