--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.7.1",
     "bcrypt-ts": "^5.0.2",
     "chart.js": "^4.4.2",
+    "class-variance-authority": "^0.7.0",
     "dotenv": "^16.4.5",
     "formidable": "^3.5.1",
     "gapi-script": "^1.2.0",
@@ -31,6 +32,7 @@
     "geist": "^1.2.0",
     "googleapis": "^140.0.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.408.0",
     "next": "^14.2.5",
     "next-auth": "^4.24.7",
     "next-iron-session": "^4.2.0",
@@ -42,11 +44,13 @@
     "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-datepicker": "^6.9.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-google-calendar-api": "^2.3.0",
     "react-icons": "^5.2.1",
     "recharts": "^2.12.7",
     "sharp": "^0.33.3",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "compilerOptions": {
