--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/gapi.auth2": "^0.0.60",
     "@types/next-auth": "^3.15.0",
     "@types/react-chartjs-2": "^2.5.7",
+    "@vercel/postgres": "^0.9.0",
     "axios": "^1.7.1",
     "bcrypt-ts": "^5.0.2",
     "chart.js": "^4.4.2",
