--- a/package.json
+++ b/package.json
@@ -1,95 +1,96 @@
 {
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbo",
-    "build": "prisma generate && prisma migrate deploy && next build",
-    "start": "next start",
-    "seed": "node --loader ts-node/esm prisma/seed.js"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.15.15",
-    "@mui/material": "^5.15.15",
-    "@mui/types": "^7.2.14",
-    "@mui/x-charts": "^7.3.2",
-    "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.13.0",
-    "@radix-ui/react-avatar": "^1.1.0",
-    "@radix-ui/react-navigation-menu": "^1.2.0",
-    "@radix-ui/react-popover": "^1.1.1",
-    "@radix-ui/react-select": "^2.1.1",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-tabs": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.2",
-    "@types/gapi": "^0.0.47",
-    "@types/gapi.auth2": "^0.0.60",
-    "@types/next-auth": "^3.15.0",
-    "@types/react-chartjs-2": "^2.5.7",
-    "@vercel/postgres": "^0.9.0",
-    "axios": "^1.7.1",
-    "bcrypt-ts": "^5.0.2",
-    "chart.js": "^4.4.2",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "date-fns": "^3.6.0",
-    "dotenv": "^16.4.5",
-    "formidable": "^3.5.1",
-    "gapi-script": "^1.2.0",
-    "gaxios": "^6.6.0",
-    "geist": "^1.2.0",
-    "googleapis": "^140.0.0",
-    "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.408.0",
-    "next": "^14.2.5",
-    "next-auth": "^4.24.7",
-    "next-iron-session": "^4.2.0",
-    "next-plugin-svgr": "^1.1.10",
-    "postgres": "^3.4.3",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.10.2",
-    "react-calendar": "^5.0.0",
-    "react-chartjs-2": "^5.2.0",
-    "react-circular-progressbar": "^2.1.0",
-    "react-datepicker": "^6.9.0",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "^18.2.0",
-    "react-google-calendar-api": "^2.3.0",
-    "react-icons": "^5.2.1",
-    "recharts": "^2.12.7",
-    "sharp": "^0.33.3",
-    "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7"
-  },
-  "compilerOptions": {
-    "types": [
-      "@mui/material"
-    ]
-  },
-  "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20.14.9",
-    "@types/react": "^18.2.79",
-    "@types/react-datepicker": "^6.2.0",
-    "@types/react-dom": "^18.2.25",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
-    "prisma": "^5.15.0",
-    "tailwindcss": "^3.4.6",
-    "tailwindcss-animate": "^1.0.7",
-    "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.5.3"
-  },
-  "type": "module",
-  "name": "erp-s",
-  "version": "1.0.0",
-  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
-  "main": "index.js",
-  "directories": {
-    "lib": "lib"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbo",
+		"build": "prisma generate && prisma migrate deploy && next build",
+		"start": "next start",
+		"seed": "node --loader ts-node/esm prisma/seed.js"
+	},
+	"dependencies": {
+		"@emotion/react": "^11.11.4",
+		"@emotion/styled": "^11.11.5",
+		"@mui/icons-material": "^5.15.15",
+		"@mui/material": "^5.15.15",
+		"@mui/types": "^7.2.14",
+		"@mui/x-charts": "^7.3.2",
+		"@next-auth/prisma-adapter": "^1.0.7",
+		"@prisma/client": "^5.13.0",
+		"@radix-ui/react-avatar": "^1.1.0",
+		"@radix-ui/react-navigation-menu": "^1.2.0",
+		"@radix-ui/react-popover": "^1.1.1",
+		"@radix-ui/react-select": "^2.1.1",
+		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-tabs": "^1.1.0",
+		"@radix-ui/react-tooltip": "^1.1.2",
+		"@reduxjs/toolkit": "^2.2.6",
+		"@types/gapi": "^0.0.47",
+		"@types/gapi.auth2": "^0.0.60",
+		"@types/next-auth": "^3.15.0",
+		"@types/react-chartjs-2": "^2.5.7",
+		"@vercel/postgres": "^0.9.0",
+		"axios": "^1.7.1",
+		"bcrypt-ts": "^5.0.2",
+		"chart.js": "^4.4.2",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
+		"date-fns": "^3.6.0",
+		"dotenv": "^16.4.5",
+		"formidable": "^3.5.1",
+		"gapi-script": "^1.2.0",
+		"gaxios": "^6.6.0",
+		"geist": "^1.2.0",
+		"googleapis": "^140.0.0",
+		"jsonwebtoken": "^9.0.2",
+		"lucide-react": "^0.408.0",
+		"next": "^14.2.5",
+		"next-auth": "^4.24.7",
+		"next-iron-session": "^4.2.0",
+		"next-plugin-svgr": "^1.1.10",
+		"postgres": "^3.4.3",
+		"react": "^18.2.0",
+		"react-bootstrap": "^2.10.2",
+		"react-calendar": "^5.0.0",
+		"react-chartjs-2": "^5.2.0",
+		"react-circular-progressbar": "^2.1.0",
+		"react-datepicker": "^6.9.0",
+		"react-day-picker": "^8.10.1",
+		"react-dom": "^18.2.0",
+		"react-google-calendar-api": "^2.3.0",
+		"react-icons": "^5.2.1",
+		"react-redux": "^9.1.2",
+		"recharts": "^2.12.7",
+		"sharp": "^0.33.3",
+		"tailwind-merge": "^2.4.0",
+		"tailwindcss-animate": "^1.0.7"
+	},
+	"compilerOptions": {
+		"types": [
+			"@mui/material"
+		]
+	},
+	"devDependencies": {
+		"@types/jsonwebtoken": "^9.0.6",
+		"@types/node": "^20.14.9",
+		"@types/react": "^18.2.79",
+		"@types/react-datepicker": "^6.2.0",
+		"@types/react-dom": "^18.2.25",
+		"autoprefixer": "^10.4.16",
+		"postcss": "^8.4.32",
+		"prisma": "^5.15.0",
+		"tailwindcss": "^3.4.6",
+		"ts-node": "^10.9.2",
+		"tsconfig-paths": "^4.2.0",
+		"typescript": "^5.5.3"
+	},
+	"type": "module",
+	"name": "erp-s",
+	"version": "1.0.0",
+	"description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+	"main": "index.js",
+	"directories": {
+		"lib": "lib"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC"
 }
