--- a/.env
+++ b/.env
@@ -2,3 +2,11 @@
 # Vercel postgrsql urls
 POSTGRES_PRISMA_URL="postgres://default:k8faPlW0bIGp@ep-empty-sky-a1po6f4g-pooler.ap-southeast-1.aws.neon.tech/verceldb?pgbouncer=true&connect_timeout=15&sslmode=require"
 POSTGRES_URL_NON_POOLING="postgres://default:k8faPlW0bIGp@ep-empty-sky-a1po6f4g.ap-southeast-1.aws.neon.tech/verceldb?sslmode=require"
+
+#          FIREBASE
+FB_API_KEY="AIzaSyCdBMrDaz5b-NVZsDLyYzR4G7LCe1UkInY"
+FB_AUTH_DOMAIN="epr-s-52978.firebaseapp.com"
+FB_PROJECT_ID="epr-s-52978"
+FB_STORAGE_BUCKET="epr-s-52978.appspot.com"
+FB_MESSAGEING_SENSOR="92465644270"
+FB_APP_ID="1:92465644270:web:a690c37bd5609839a429ff"
