--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"clsx": "^2.1.1",
 		"date-fns": "^3.6.0",
 		"dotenv": "^16.4.5",
+		"firebase": "^10.12.4",
 		"formidable": "^3.5.1",
 		"gapi-script": "^1.2.0",
 		"gaxios": "^6.6.0",
@@ -76,7 +77,7 @@
 		"@types/react-dom": "^18.2.25",
 		"autoprefixer": "^10.4.16",
 		"postcss": "^8.4.32",
-		"prisma": "^5.15.0",
+		"prisma": "^5.17.0",
 		"tailwindcss": "^3.4.6",
 		"ts-node": "^10.9.2",
 		"tsconfig-paths": "^4.2.0",
