--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@mui/x-charts": "^7.3.2",
 		"@next-auth/prisma-adapter": "^1.0.7",
 		"@prisma/client": "^5.17.0",
+		"@radix-ui/react-alert-dialog": "^1.1.1",
 		"@radix-ui/react-avatar": "^1.1.0",
 		"@radix-ui/react-navigation-menu": "^1.2.0",
 		"@radix-ui/react-popover": "^1.1.1",
@@ -52,7 +53,7 @@
 		"react": "^18.2.0",
 		"react-bootstrap": "^2.10.2",
 		"react-calendar": "^5.0.0",
-		"react-chartjs-2": "^5.2.0",
+		"react-chartjs-2": "4.0.0",
 		"react-circular-progressbar": "^2.1.0",
 		"react-datepicker": "^6.9.0",
 		"react-day-picker": "^8.10.1",
