signup and login functionality added

--- a/.env
+++ b/.env
@@ -10,3 +10,6 @@ FB_PROJECT_ID="epr-s-52978"
 FB_STORAGE_BUCKET="epr-s-52978.appspot.com"
 FB_MESSAGEING_SENSOR="92465644270"
 FB_APP_ID="1:92465644270:web:a690c37bd5609839a429ff"
+
+# next-auth secret
+AUTH_SECRET = 'NextAuth65644Secret'
