--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"private": true,
 	"scripts": {
-		"dev": "next dev --turbo",
+		"dev": "next dev",
 		"build": "prisma generate && prisma migrate deploy && next build",
 		"start": "next start",
 		"seed": "node --loader ts-node/esm prisma/seed.js"
@@ -24,6 +24,7 @@
 		"@radix-ui/react-tabs": "^1.1.0",
 		"@radix-ui/react-tooltip": "^1.1.2",
 		"@reduxjs/toolkit": "^2.2.6",
+		"@types/bcryptjs": "^2.4.6",
 		"@types/gapi": "^0.0.47",
 		"@types/gapi.auth2": "^0.0.60",
 		"@types/next-auth": "^3.15.0",
@@ -31,6 +32,7 @@
 		"@vercel/postgres": "^0.9.0",
 		"axios": "^1.7.1",
 		"bcrypt-ts": "^5.0.2",
+		"bcryptjs": "^2.4.3",
 		"chart.js": "^4.4.2",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
@@ -46,7 +48,7 @@
 		"lucide-react": "^0.408.0",
 		"moment": "^2.30.1",
 		"next": "^14.2.5",
-		"next-auth": "^4.24.7",
+		"next-auth": "^5.0.0-beta.20",
 		"next-iron-session": "^4.2.0",
 		"next-plugin-svgr": "^1.1.10",
 		"postgres": "^3.4.3",
