--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"dependencies": {
 		"@emotion/react": "^11.11.4",
 		"@emotion/styled": "^11.11.5",
+		"@headlessui/react": "^2.1.8",
 		"@mui/icons-material": "^5.15.15",
 		"@mui/material": "^5.15.15",
 		"@mui/types": "^7.2.14",
