--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 
 # Vercel postgrsql urls
-POSTGRES_PRISMA_URL="postgres://default:k8faPlW0bIGp@ep-empty-sky-a1po6f4g-pooler.ap-southeast-1.aws.neon.tech/verceldb?pgbouncer=true&connect_timeout=15&sslmode=require"
-POSTGRES_URL_NON_POOLING="postgres://default:k8faPlW0bIGp@ep-empty-sky-a1po6f4g.ap-southeast-1.aws.neon.tech/verceldb?sslmode=require"
+#POSTGRES_PRISMA_URL="postgres://default:k8faPlW0bIGp@ep-empty-sky-a1po6f4g-pooler.ap-southeast-1.aws.neon.tech/verceldb?pgbouncer=true&connect_timeout=15&sslmode=require"
+#POSTGRES_URL_NON_POOLING="postgres://default:k8faPlW0bIGp@ep-empty-sky-a1po6f4g.ap-southeast-1.aws.neon.tech/verceldb?sslmode=require"
 
 #          FIREBASE
 FB_API_KEY="AIzaSyCdBMrDaz5b-NVZsDLyYzR4G7LCe1UkInY"
@@ -13,3 +13,13 @@ FB_APP_ID="1:92465644270:web:a690c37bd5609839a429ff"
 
 # next-auth secret
 AUTH_SECRET = 'NextAuth65644Secret'
+
+# VERCEL POSTGRESQL 
+POSTGRES_URL="postgres://default:lSi6gkojrm0A@ep-solitary-lake-a4671mcv-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_PRISMA_URL="postgres://default:lSi6gkojrm0A@ep-solitary-lake-a4671mcv-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15&sslmode=require"
+POSTGRES_URL_NO_SSL="postgres://default:lSi6gkojrm0A@ep-solitary-lake-a4671mcv-pooler.us-east-1.aws.neon.tech:5432/verceldb"
+POSTGRES_URL_NON_POOLING="postgres://default:lSi6gkojrm0A@ep-solitary-lake-a4671mcv.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_USER="default"
+POSTGRES_HOST="ep-solitary-lake-a4671mcv-pooler.us-east-1.aws.neon.tech"
+POSTGRES_PASSWORD="lSi6gkojrm0A"
+POSTGRES_DATABASE="verceldb"
