--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"@mui/types": "^7.2.14",
 		"@mui/x-charts": "^7.3.2",
 		"@next-auth/prisma-adapter": "^1.0.7",
-		"@prisma/client": "^5.17.0",
+		"@prisma/client": "^5.20.0",
 		"@radix-ui/react-alert-dialog": "^1.1.1",
 		"@radix-ui/react-avatar": "^1.1.0",
 		"@radix-ui/react-navigation-menu": "^1.2.0",
@@ -67,7 +67,8 @@
 		"recharts": "^2.12.7",
 		"sharp": "^0.33.3",
 		"tailwind-merge": "^2.4.0",
-		"tailwindcss-animate": "^1.0.7"
+		"tailwindcss-animate": "^1.0.7",
+		"vercel": "^37.6.0"
 	},
 	"compilerOptions": {
 		"types": [
