--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@radix-ui/react-tabs": "^1.1.0",
 		"@radix-ui/react-tooltip": "^1.1.2",
 		"@reduxjs/toolkit": "^2.2.6",
+		"@tanstack/react-query": "^5.59.0",
 		"@types/bcryptjs": "^2.4.6",
 		"@types/gapi": "^0.0.47",
 		"@types/gapi.auth2": "^0.0.60",
@@ -62,6 +63,7 @@
 		"react-day-picker": "^8.10.1",
 		"react-dom": "^18.2.0",
 		"react-google-calendar-api": "^2.3.0",
+		"react-hook-form": "^7.53.0",
 		"react-icons": "^5.2.1",
 		"react-redux": "^9.1.2",
 		"recharts": "^2.12.7",
