--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
 		"lucide-react": "^0.408.0",
 		"moment": "^2.30.1",
 		"next": "^14.2.5",
-		"next-auth": "^5.0.0-beta.20",
+		"next-auth": "^4.0.0",
 		"next-iron-session": "^4.2.0",
 		"next-plugin-svgr": "^1.1.10",
 		"postgres": "^3.4.3",
