auth issue fixed

--- a/.env
+++ b/.env
@@ -23,7 +23,7 @@ FB_MESSAGEING_SENSOR="92465644270"
 FB_APP_ID="1:92465644270:web:a690c37bd5609839a429ff"
 
 # next-auth secret
-AUTH_SECRET = 'NextAuth65644Secret'
+NEXTAUTH_SECRET = 'NextAuth65644Secret'
 
 # RENDER POSTGRESQL
 POSTGRES_URL="postgresql://erp_saqr_user:GiiUz2Xw4esd2O0QH7rCYIA6EHVneU8h@dpg-cs7tnpd6l47c73c907r0-a.oregon-postgres.render.com/erp_saqr"
