--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
-		"build": "npm install --legacy-peer-deps && npm run build",
+		"build": "next build",
 		"start": "NODE_ENV=production node server.js",
 		"ins": "npm install -f",
 		"seed": "node --loader ts-node/esm prisma/seed.js"
@@ -55,14 +55,14 @@
 		"next-iron-session": "^4.2.0",
 		"next-plugin-svgr": "^1.1.10",
 		"postgres": "^3.4.3",
-		"react": "^18.2.0",
+		"react": "^17.0.",
 		"react-bootstrap": "^2.10.2",
 		"react-calendar": "^5.0.0",
 		"react-chartjs-2": "4.0.0",
 		"react-circular-progressbar": "^2.1.0",
 		"react-datepicker": "^6.9.0",
 		"react-day-picker": "^8.10.1",
-		"react-dom": "^18.2.0",
+		"react-dom": "^17.0.2",
 		"react-google-calendar-api": "^2.3.0",
 		"react-hook-form": "^7.53.0",
 		"react-icons": "^5.2.1",
