--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
-		"build": "next build",
+		"build": "prisma generate && prisma migrate deploy && next build",
 		"start": "NODE_ENV=production node server.js",
 		"ins": "npm install -f",
 		"seed": "node --loader ts-node/esm prisma/seed.js"
@@ -36,7 +36,7 @@
 		"axios": "^1.7.1",
 		"bcrypt-ts": "^5.0.2",
 		"bcryptjs": "^2.4.3",
-		"chart.js": "^3.9.1",
+		"chart.js": "^4.4.2",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"date-fns": "^3.6.0",
@@ -50,19 +50,19 @@
 		"jsonwebtoken": "^9.0.2",
 		"lucide-react": "^0.408.0",
 		"moment": "^2.30.1",
-		"next": "^14.2.15",
+		"next": "^14.2.5",
 		"next-auth": "^4.0.0",
 		"next-iron-session": "^4.2.0",
 		"next-plugin-svgr": "^1.1.10",
 		"postgres": "^3.4.3",
-		"react": "^17.0.2",
+		"react": "^18.2.0",
 		"react-bootstrap": "^2.10.2",
 		"react-calendar": "^5.0.0",
 		"react-chartjs-2": "4.0.0",
 		"react-circular-progressbar": "^2.1.0",
 		"react-datepicker": "^6.9.0",
 		"react-day-picker": "^8.10.1",
-		"react-dom": "^17.0.2",
+		"react-dom": "^18.2.0",
 		"react-google-calendar-api": "^2.3.0",
 		"react-hook-form": "^7.53.0",
 		"react-icons": "^5.2.1",
