vercel db variables added

--- a/.env
+++ b/.env
@@ -1,17 +1,12 @@
-
-# Vercel postgrsql urls
-#POSTGRES_PRISMA_URL="postgres://default:k8faPlW0bIGp@ep-empty-sky-a1po6f4g-pooler.ap-southeast-1.aws.neon.tech/verceldb?pgbouncer=true&connect_timeout=15&sslmode=require"
-#POSTGRES_URL_NON_POOLING="postgres://default:k8faPlW0bIGp@ep-empty-sky-a1po6f4g.ap-southeast-1.aws.neon.tech/verceldb?sslmode=require"
-
-# VERCEL POSTGRESQL 
-# POSTGRES_URL="postgres://default:lSi6gkojrm0A@ep-solitary-lake-a4671mcv-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
-# POSTGRES_PRISMA_URL="postgres://default:lSi6gkojrm0A@ep-solitary-lake-a4671mcv-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15&sslmode=require"
-# POSTGRES_URL_NO_SSL="postgres://default:lSi6gkojrm0A@ep-solitary-lake-a4671mcv-pooler.us-east-1.aws.neon.tech:5432/verceldb"
-# POSTGRES_URL_NON_POOLING="postgres://default:lSi6gkojrm0A@ep-solitary-lake-a4671mcv.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
-# POSTGRES_USER="default"
-# POSTGRES_HOST="ep-solitary-lake-a4671mcv-pooler.us-east-1.aws.neon.tech"
-# POSTGRES_PASSWORD="lSi6gkojrm0A"
-# POSTGRES_DATABASE="verceldb"
+#vercel 
+POSTGRES_URL="postgres://default:pRVAvsqry25M@ep-red-heart-a43ior14-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_PRISMA_URL="postgres://default:pRVAvsqry25M@ep-red-heart-a43ior14-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NO_SSL="postgres://default:pRVAvsqry25M@ep-red-heart-a43ior14-pooler.us-east-1.aws.neon.tech:5432/verceldb"
+POSTGRES_URL_NON_POOLING="postgres://default:pRVAvsqry25M@ep-red-heart-a43ior14.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_USER="default"
+POSTGRES_HOST="ep-red-heart-a43ior14-pooler.us-east-1.aws.neon.tech"
+POSTGRES_PASSWORD="pRVAvsqry25M"
+POSTGRES_DATABASE="verceldb"
 
 
 #          FIREBASE
@@ -22,18 +17,18 @@ FB_STORAGE_BUCKET="epr-s-52978.appspot.com"
 FB_MESSAGEING_SENSOR="92465644270"
 FB_APP_ID="1:92465644270:web:a690c37bd5609839a429ff"
 
-# next-auth secret
+# # next-auth secret
 NEXTAUTH_SECRET = 'NextAuth65644Secret'
 
-# RENDER POSTGRESQL
-# New connection strings
-POSTGRES_URL="postgresql://erp_v_user:JwcQzPrAwRsWUFE80X7Pkpcdjn23BV8r@dpg-csb16il6l47c73f5mnig-a.oregon-postgres.render.com/erp_v"
-POSTGRES_PRISMA_URL="postgresql://erp_v_user:JwcQzPrAwRsWUFE80X7Pkpcdjn23BV8r@dpg-csb16il6l47c73f5mnig-a.oregon-postgres.render.com/erp_v?pgbouncer=true&connect_timeout=15&sslmode=require"
-POSTGRES_URL_NO_SSL="postgresql://erp_v_user:JwcQzPrAwRsWUFE80X7Pkpcdjn23BV8r@dpg-csb16il6l47c73f5mnig-a/erp_v"
-POSTGRES_URL_NON_POOLING="postgresql://erp_v_user:JwcQzPrAwRsWUFE80X7Pkpcdjn23BV8r@dpg-csb16il6l47c73f5mnig-a.oregon-postgres.render.com/erp_v?sslmode=require"
+# # RENDER POSTGRESQL
+# # New connection strings
+# POSTGRES_URL="postgresql://erp_v_user:JwcQzPrAwRsWUFE80X7Pkpcdjn23BV8r@dpg-csb16il6l47c73f5mnig-a.oregon-postgres.render.com/erp_v"
+# POSTGRES_PRISMA_URL="postgresql://erp_v_user:JwcQzPrAwRsWUFE80X7Pkpcdjn23BV8r@dpg-csb16il6l47c73f5mnig-a.oregon-postgres.render.com/erp_v?pgbouncer=true&connect_timeout=15&sslmode=require"
+# POSTGRES_URL_NO_SSL="postgresql://erp_v_user:JwcQzPrAwRsWUFE80X7Pkpcdjn23BV8r@dpg-csb16il6l47c73f5mnig-a/erp_v"
+# POSTGRES_URL_NON_POOLING="postgresql://erp_v_user:JwcQzPrAwRsWUFE80X7Pkpcdjn23BV8r@dpg-csb16il6l47c73f5mnig-a.oregon-postgres.render.com/erp_v?sslmode=require"
 
-# New database credentials
-POSTGRES_USER="erp_v_user"
-POSTGRES_HOST="dpg-csb16il6l47c73f5mnig-a.oregon-postgres.render.com"
-POSTGRES_PASSWORD="JwcQzPrAwRsWUFE80X7Pkpcdjn23BV8r"
-POSTGRES_DATABASE="erp_v"
+# # New database credentials
+# POSTGRES_USER="erp_v_user"
+# POSTGRES_HOST="dpg-csb16il6l47c73f5mnig-a.oregon-postgres.render.com"
+# POSTGRES_PASSWORD="JwcQzPrAwRsWUFE80X7Pkpcdjn23BV8r"
+# POSTGRES_DATABASE="erp_v"
