--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
-#vercel 
-POSTGRES_URL="postgres://default:pRVAvsqry25M@ep-red-heart-a43ior14-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
-POSTGRES_PRISMA_URL="postgres://default:pRVAvsqry25M@ep-red-heart-a43ior14-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
-POSTGRES_URL_NO_SSL="postgres://default:pRVAvsqry25M@ep-red-heart-a43ior14-pooler.us-east-1.aws.neon.tech:5432/verceldb"
-POSTGRES_URL_NON_POOLING="postgres://default:pRVAvsqry25M@ep-red-heart-a43ior14.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
-POSTGRES_USER="default"
-POSTGRES_HOST="ep-red-heart-a43ior14-pooler.us-east-1.aws.neon.tech"
-POSTGRES_PASSWORD="pRVAvsqry25M"
-POSTGRES_DATABASE="verceldb"
+# #vercel 
+# POSTGRES_URL="postgres://default:pRVAvsqry25M@ep-red-heart-a43ior14-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+# POSTGRES_PRISMA_URL="postgres://default:pRVAvsqry25M@ep-red-heart-a43ior14-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
+# POSTGRES_URL_NO_SSL="postgres://default:pRVAvsqry25M@ep-red-heart-a43ior14-pooler.us-east-1.aws.neon.tech:5432/verceldb"
+# POSTGRES_URL_NON_POOLING="postgres://default:pRVAvsqry25M@ep-red-heart-a43ior14.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+# POSTGRES_USER="default"
+# POSTGRES_HOST="ep-red-heart-a43ior14-pooler.us-east-1.aws.neon.tech"
+# POSTGRES_PASSWORD="pRVAvsqry25M"
+# POSTGRES_DATABASE="verceldb"
 
 
 #          FIREBASE
@@ -32,3 +32,13 @@ NEXTAUTH_SECRET = 'NextAuth65644Secret'
 # POSTGRES_HOST="dpg-csb16il6l47c73f5mnig-a.oregon-postgres.render.com"
 # POSTGRES_PASSWORD="JwcQzPrAwRsWUFE80X7Pkpcdjn23BV8r"
 # POSTGRES_DATABASE="erp_v"
+
+
+POSTGRES_URL="postgres://default:lSi6gkojrm0A@ep-solitary-lake-a4671mcv-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_PRISMA_URL="postgres://default:lSi6gkojrm0A@ep-solitary-lake-a4671mcv-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NO_SSL="postgres://default:lSi6gkojrm0A@ep-solitary-lake-a4671mcv-pooler.us-east-1.aws.neon.tech:5432/verceldb"
+POSTGRES_URL_NON_POOLING="postgres://default:lSi6gkojrm0A@ep-solitary-lake-a4671mcv.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_USER="default"
+POSTGRES_HOST="ep-solitary-lake-a4671mcv-pooler.us-east-1.aws.neon.tech"
+POSTGRES_PASSWORD="lSi6gkojrm0A"
+POSTGRES_DATABASE="verceldb"
